feat: Complete unitary test with JUnit and Mockito implementation